nginx-azure.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-azure-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - employee-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        port:
          number: 8080
        host: nginx-azure-svc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-azure-svc
  labels:
    app: nginx-azure-svc
spec:
  #type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
    #nodePort: 30001
  selector:
    app: nginx-azure
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-azure
spec:
  selector:
    matchLabels:
      app: nginx-azure
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-azure
    spec:
      volumes:
      - name: nginx-azure-config
        configMap:
          name: nginx-azure-config
      containers:
      - name: nginx
        image: docker.io/nginx:1.14.2
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-azure-config
          readOnly: true
        ports:
        - containerPort: 80
